# specguard

./: .gitignore  .specguard-version  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/workflows/: release.yml
adapters/claude/: manifest.yaml
core/command-prompts/: check.md  init.md  upgrade.md
core/policies/: with-openspec.md  with-superpowers.md
core/rules/: adr-checklist.md  design-sync.md  five-laws.md
core/templates/: design.md.tpl
core/templates/decisions/: README.md.tpl  TEMPLATE.md.tpl
docs/specguard/: design.md
docs/specguard/decisions/: 0001-plugin-name-command-namespace.md  0002-init-auto-merge-hooks.md  0003-distribution-via-github-release.md  0004-python-modules-for-runtime-algorithms.md  0005-delete-check-semantic-review-package.md  0006-tighten-upgrade-interaction-and-version-handling.md  0007-withdraw-upgrade-and-simplify-contracts.md  0008-marketplace-distribution.md  README.md
docs/specguard/plans/: 2026-04-30-mvp-scaffold-plan.md  design-doc-restructure-and-v0-1-cleanup-plan.md  (+3 more)
layouts/openspec-sidecar/: manifest.yaml
layouts/specguard-default/: manifest.yaml
layouts/superpowers/: manifest.yaml
src/specguard/: hooks_merge.py  manifest.py  render.py  upgrade.py
tests/: test_dogfood_guard_ghost.py  test_dogfood_upgrade.py  test_init_merge_hooks.py  test_manifest.py  test_marketplace_schema.py  test_release_workflow.py  test_render_basic.py  test_render_claude_default.py  test_render_claude_openspec.py  test_render_claude_superpowers.py  test_smoke.py
(+28 files in other folders)
